@@ -17,6 +17,7 @@
 #ifndef BZF_MYIO
 #define BZF_MYIO
 
+void setDebugTimestamp (bool enable, bool doMicros);
 void formatDebug(const char* fmt, ...);
 
 /* egcs headers on linux define NULL as (void*)0.  that's a no no in C++. */
