@@ -67,6 +67,7 @@ struct CmdLineOptions
     oneGameOnly(false), timeManualStart(false), randomHeights(false),
     useTeleporters(false), teamKillerDies(true), printScore(false),
     publicizeServer(false), replayServer(false), startRecording(false),
+    timestampLog(false), timestampMicros(false),
     filterFilename(""), filterCallsigns(false), filterChat(false), filterSimple(false),
     banTime(300), voteTime(60), vetoTime(2), votesRequired(2),
     votePercentage(50.1f), voteRepeatTime(300),
@@ -146,6 +147,8 @@ struct CmdLineOptions
   bool			publicizeServer;
   bool			replayServer;
   bool			startRecording;
+  bool			timestampLog;
+  bool			timestampMicros;
 
   uint16_t		maxTeam[NumTeams];
   FlagNumberMap		flagCount;
